YDAL-159 update code for review